--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version=0.33-alpha
 manifoldVersion=0.33-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=LATEST-EAP-SNAPSHOT
-#defaultIjVersion=2018.2.4
+#defaultIjVersion=LATEST-EAP-SNAPSHOT
+defaultIjVersion=2018.3.1
