--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=0.34-alpha
-manifoldVersion=0.34-SNAPSHOT
+version=0.39-alpha
+manifoldVersion=0.39-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-#defaultIjVersion=LATEST-EAP-SNAPSHOT
-defaultIjVersion=2018.3.1
+defaultIjVersion=LATEST-EAP-SNAPSHOT
+//defaultIjVersion=2018.3.1
