--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
-version=0.39-alpha
-manifoldVersion=0.39-SNAPSHOT
+version=0.40-alpha
+manifoldVersion=0.40-alpha
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=LATEST-EAP-SNAPSHOT
 //defaultIjVersion=2018.3.1
+//defaultIjVersion=2017.3.4
