--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ jar {
 dependencies {
   compile group: 'systems.manifold', name: 'manifold', version: manifoldVersion
   compile group: 'systems.manifold', name: 'manifold-util', version: manifoldVersion
+  compile group: 'systems.manifold', name: 'manifold-darkj', version: manifoldVersion
+  compile group: 'systems.manifold', name: 'manifold-image', version: manifoldVersion
   compile group: 'systems.manifold', name: 'manifold-ext', version: manifoldVersion
 
   testCompile group: 'junit', name: 'junit', version: '4.12'
