- minor changes - bump version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-version=0.43-alpha
-manifoldVersion=0.43-alpha
+version=0.44-alpha
+manifoldVersion=0.44-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=LATEST-EAP-SNAPSHOT
-//defaultIjVersion=2018.3.1
+//defaultIjVersion=2018.3.4
 //defaultIjVersion=2017.3.4
