--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version=0.44-alpha
-manifoldVersion=0.44-SNAPSHOT
+manifoldVersion=0.44-alpha
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=LATEST-EAP-SNAPSHOT
 //defaultIjVersion=2018.3.4
