--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version=0.45-alpha
-manifoldVersion=0.45-alpha
+manifoldVersion=0.45-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=LATEST-EAP-SNAPSHOT
 //defaultIjVersion=2018.3.4
