--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -86,17 +86,12 @@ incremental compilation, hotswap debugging, full-featured template editing, and 
   <change-notes>
     <![CDATA[
 Manifold extension improvements <br>
-- Rewrite <b>@Self</b> implementation to provide comprehensive 'self' type support. Essentially, @Self is now a full <br>
-replacement for recursive generic types! <br>
-- <b>@Self</b> can be applied to: <br>
--- instance method <i>return type</i>  <br>
--- instance method <i>parameter type</i> <br>
--- instance <i>field type</i> <br>
-- via Manifold the compiler establishes the type of a method/field reference at the <i>use-site</i> <br>
-- you can override methods having @Self in a parameter and maintain the super type's signature, but also have your
-subclass type enforced, no bridge methods or other shenanigans otherwise present with recursive generics <br>
-- @Self is also fully supported in extension methods <br>
-Note the completion of @Self facilitates https://github.com/manifold-systems/manifold/issues/47 -- use @Self instead of generic methods and recursive generic types. <br>
+- Structural typing improvements <br>
+-- Provide means to satisfy a structural interface dynamically via registered IProxyFactory service <br>
+- Self type improvements <br>
+- Bug fixes <br>
+-- Fix regression where annotation processing libraries could cause problems with self types, structural types, etc. <br>
+-- Other minor fixes <br>
      ]]>
   </change-notes>
   
