--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -87,10 +87,9 @@ incremental compilation, hotswap debugging, full-featured template editing, and 
   <change-notes>
     <![CDATA[
 Manifold core improvements <br>
-- Support Java 12 <br>
-- Fix issues with "Create Extension Method Class" dialog <br>
-- Some performance improvements esp. faster manifold resource compilation with larger projects <br>
-- Other minor changes and fixes <br>
+- Manifold provides a new option to <b>Turn Off Checked Exceptions</b>! <br>
+-- Simply add the <i>exceptions</i> plugin argument e.g., &quot;-Xplugin:Manifold strings <i>exceptions</i>&quot; <br>
+-- Now checked exceptions behave like unchecked exceptions!  No more compiler errors, no more boilerplate try/catch, no more nonsense. <br>
      ]]>
   </change-notes>
   
